--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mapbox-gl": "^2.4.0",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
+    "ngeohash": "^0.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.16",
